module(name = "informativedrawings")

bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_zig", version = "0.12.2")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "llvm", version = "0.7.3")
bazel_dep(name = "zml")

# rules_zig: must use the same fork as ZML
git_override(
    module_name = "rules_zig",
    commit = "b65a2bb460b9dbcbcc3231ba648c3c1a266c4eb5",
    remote = "https://github.com/zml/rules_zig.git",
)

# ZML
git_override(
    module_name = "zml",
    commit = "c8cc4760428cb48bf184aa02084501b0d903a739",
    remote = "https://github.com/zml/zml.git",
)

# To use a local ZML clone replace git_override with this:
# local_path_override(module_name = "zml", path = "../zml")

### Zig toolchain - must match ZML's version
zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.index(file = "//bazel:zig_index.json")
zig.toolchain(zig_version = "0.16.0")
zig.mirrors(urls = [
    "https://pkg.machengine.org/zig",
    "https://zigmirror.hryx.net/zig",
    "https://zig.linus.dev/zig",
    "https://zig.squirl.dev",
    "https://zig.florent.dev",
    "https://zig.mirror.mschae23.de/zig",
    "https://zigmirror.meox.dev",
    "https://ziglang.freetls.fastly.net",
    "https://zig.tilok.dev",
    "https://zig-mirror.tsimnet.eu/zig",
    "https://zig.karearl.com/zig",
    "https://pkg.earth/zig",
    "https://fs.liujiacai.net/zigbuilds",
    "https://ziglang.org/builds/",
])
use_repo(zig, "zig_toolchains")

register_toolchains("@rules_zig//zig/target:all")
register_toolchains("@zig_toolchains//:all")
###

### LLVM toolchains
register_toolchains("@llvm//toolchain:all")
###

### Non-module dependencies (translate-c, arocc)
non_module_deps = use_extension("//:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "arocc", "translate-c")
###
